v1.4.1 - TBD

v1.4 - July 26, 2021
INFO:
  Moved all materials to a new ADDSynth Materials mod.
   - This once again breaks your old worlds, and Forge will warn you of the missing items.
   - Hopefully this should be the last time, because I'm not planning on splitting off
      items into a new mod again.
   - This time I tried to use a DataFixer to seamlessly convert your world data to the new
      format, but the DataFixer stuff was much too complicated for me to figure it out
      without documentation, so I have to wait for someone to explain how it works before
      I can use it.
  The Overpowered mod was renamed to Overpowered Technology.
  Starting in version 1.5.x, the mod_id for Overpowered Technology will be renamed
    from overpowered to overpowered_technology.
  Starting in version 1.5.x, ADDSynthCore, ADDSynth Energy, and Overpowered Technology
    will be split apart into 3 separate files.
NEW:
  Added Silicon and Rose Quartz.
  Added more mods to detect:
    The One Probe, Hwyla, The Beneath, Cooking for Blockheads, Tiny Progressions,
    FoamFix, RFTools Utility, Draconic Evolution, Curios, Forestry,
    Immersive Engineering, Immersive Railroading, Track API, Sound Filters,
    Block Renderer, Item Zoom, Neat, and McJtyLib.
    - Updated Pam's Harvestcraft so we can detect it now.
  Added Team Manager.
  Added Circuit Fabricator.
    - Added 8 tiers of circuits.
  Added a standard Generator to ADDSynth Energy.
    - It takes in standard fuel items such as Coal, Charcoal, Wood, and Planks.
    - Now has an HD texture.
  Added a new Scanning Laser item.
  Whitelisted TileEntities to work with Applied Energistics Spatial-IO.
    - As of now, this needs further testing to ensure there aren't any errors.
  Added Celestial Gem:
    - They look and function the same as the Energy Crystal in previous versions.
    - You now get Energy Crystals by smelting Celestial Gems in a Blast Furnace.